--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,7 +10,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
     
-    <title>Contact Keeper | Track your contacts</title>
+    <title>Sendex | Store & Track your contacts</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
